# samp-plugin-template

./: CMakeLists.txt  README.md
lib/: CVector.h  CVector2D.h  Hooking.h  Memory.cpp  Memory.h  hook.h  types.h
lib/NetGame/: 3DText.h  Actor.h  CNetGame.h  Game.cpp  Game.h  GameMode.h  GangZone.h  Hooks.cpp  Hooks.h  Menu.h  Object.h  PickUp.h  Player.h  PlayerVar.h  ScriptTimer.h  Structs.h  SyncData.h  TextDraw.h  Vehicle.h  defines.h
lib/RakNet/: BitStream.cpp  BitStream.h  FunctionTypes.h  Packet.h  RPC.h  RakOffset.h  RakServer.cpp  RakServer.h
lib/SAMP/: CSAMP.cpp  CSAMP.h
sampsvr/: crashinfo.txt  server.cfg  server_log.txt
sampsvr/gamemodes/: main.amx  main.pwn
src/: CMakeLists.txt  Hooks.cpp  Native.cpp  Native.h  commom.h  main.cpp
